# Regular_Expression_to_NFA-DFA

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  plan.md
src/: ast.cpp  ast.h  binding.cpp  dfa.cpp  dfa.h  lexer.cpp  lexer.h  main.cpp  nfa.cpp  nfa.h  parser.cpp  parser.h  serializer.cpp  serializer.h  token.h
tests/: test_dfa.cpp  test_lexer.cpp  test_nfa.cpp  test_parser.cpp
web/: app.js  automata.js  automata.wasm  index.html  renderer.js  style.css
